--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -9,6 +9,8 @@
         "profile": "Thông tin",
         "emptyData": "Không có dữ liệu cần tra cứu!"
     },
+    "example_file": "Tải dữ liệu mẫu",
+    "import_excel": "Nhập file excel",
     "update_pharmacy_logo": "Cập nhật ảnh đại diện nhà thuốc",
     "pharma": "Nhà thuốc",
     "print": "In hóa đơn",
@@ -201,6 +203,7 @@
         "btn": "Gửi yêu cầu"
     },
     "message": {
+        "error_file": "File tải lên bị lỗi",
         "require_unit_rate": "Nếu bạn đã nhập thông tin cấu hình chuyển đổi đơn vị, bạn phải nhập đầy đủ thông tin cần thiết",
         "require_exp_date": "Ngày hết hạn là bắt buộc nhập nếu sản phẩm thuộc nhóm Dược phẩm",
         "require_store_limit": "Nếu bạn đã nhập thông tin cấu hình hạn mức kho, bạn phải nhập đầy đủ thông tin cần thiết",
